Migrate from zfs to btrfs

--- a/config-examples/rsync-backup.conf
+++ b/config-examples/rsync-backup.conf
@@ -10,7 +10,7 @@ PARAMS=( --archive
          --specials
          --delete
          --exclude-from="/etc/rsync-backup/exclude.backup"
-         --exclude ".zfs"
+         --exclude ".snapshots"
          --filter="dir-merge /.rsync-filter.backup"
        )
 
@@ -23,11 +23,12 @@ BACKUP=( /boot
          /home
        )
 
-ZFS_POOL="backup/$(hostname)"
+BEFORE_HOOKS=( "/root/scripts/mount-local-backup" )
 
-BEFORE_HOOKS=( "zpool import -d /var/data/backup backup" )
+SNAPSHOT="$(hostname)-$(date +%F-%T)"
 
-AFTER_HOOKS=( "zfs snapshot -r \"${ZFS_POOL}@$(hostname)-\$(date +%F-%T)\"" 
-              "zpool export backup"
+AFTER_HOOKS=( "btrfs subvolume snapshot -r \"${TARGET}\" \"${TARGET}/.snapshots/${SNAPSHOT}\""
+              "btrfs subvolume snapshot -r \"${TARGET}/home\" \"${TARGET}/home/.snapshots/${SNAPSHOT}\""
+              "/root/scripts/umount-local-backup"
               "sync"
             )
