--- a/config-examples/rsync-external.conf
+++ b/config-examples/rsync-external.conf
@@ -17,10 +17,4 @@ BACKUP=(
 
 BEFORE_HOOKS=( "true" )
 
-AFTER_HOOKS=( "zfs import -d /var/data/backup backup"
-              "zfs import -d /mnt/external/backup backup-external"
-              "zfs-sync backup backup-external"
-              "zpool export backup"
-              "zpool export backup-external"
-              "sync" 
-            )
+AFTER_HOOKS=( "sync" )
